--- a/www/templates/quizzes.html
+++ b/www/templates/quizzes.html
@@ -11,7 +11,7 @@
         <div class="padding">
             <p>How’s your Us-ness really doing? How well are you managing your boundaries these days? Take these quizzes and find out where you stand.</p>
             <button ui-sref="menu.tabs.quizzes_usness" class="button button-block button-calm">US-NESS QUIZ</button>
-            <button href="#" class="button button-block button-calm">BOUNDARIES QUIZ</button>
+            <button ui-sref="menu.tabs.quizzes_boundaries" class="button button-block button-calm">BOUNDARIES QUIZ</button>
 		</div>
 	</ion-content>
 </ion-view>
