--- a/www/templates/decisions.html
+++ b/www/templates/decisions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Decisions">
 <ion-nav-title>
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
