updated boundaries quiz resulte

--- a/www/templates/quizzes_boundaries_results.html
+++ b/www/templates/quizzes_boundaries_results.html
@@ -10,33 +10,26 @@
 			<p>As you view your scores, remember the results might put you into a place of pain. If so, use the 4 Steps to move from your pain cycle to your peace cycle.</p>
 		</div>
 		<ul class="quizzes-results-list list">
-			<li ng-if="boundariesQuizTotal < 15" class="item">
+			<li ng-if="boundariesQuizTotal < 17" class="item">
 				<div class="quizzes-circle-container">
 					<span class="red-circle">RED</span>
 				</div>
-				<div class="quizzes-circle-text">YOUR US IS ASKING FOR ATTENTION
-					<br>You’re feeling less than connected in most of your Us-ness categories. Choose 1-3 categories that feel most important to you as a couple and make a decision on how to strengthen your Us in these categories. Go to our Make a Decision button for more help.</div>
+				<div class="quizzes-circle-text">THE WALL OF CHINA HAS NOTHING ON YOU
+					<br>Your boundaries are firm, like cement. You reserve your energy for things that matter the most to you. You prefer to have a plan and struggle when the plan shifts. Friends think of you as reliable, but a little rigid. Pick 1-3 categories where your US would be helped in you becoming more flexible in your boundaries. What are 3 ways you can move in that direction?</div>
 			</li>
-			<li ng-if="boundariesQuizTotal >= 15 && boundariesQuizTotal < 20" class="item">
+			<li ng-if="boundariesQuizTotal >= 17 && boundariesQuizTotal < 23" class="item">
 				<div class="quizzes-circle-container">
 					<span class="orange-circle circle-selceted">ORANGE</span>
 				</div>
-				<div class="quizzes-circle-text">YOUR US NEEDS A TUNE-UP
-					<br>Your Us is feeling run down and could use a boost. Choose 2 areas where your Us needs work, and decide as a couple how to move forward.</div>
+				<div class="quizzes-circle-text">YOU'RE AN OCEAN WAVE: INCREDIBLE AND UNPREDICTABLE
+					<br>Your boundaries go wherever the wind takes you or the moon pulls you. You spend your energy freely, blessing others as you go, but sometimes forgetting yourself or those closest to you. Friends think of you as fun, but a little unreliable. Pick 1-3 categories where your US would be helped in you becoming more grounded in your boundaries. What are 3 ways you can move in that direction?</div>
 			</li>
-			<li ng-if="boundariesQuizTotal >= 20 && boundariesQuizTotal < 25" class="item">
-				<div class="quizzes-circle-container">
-					<span class="yellow-circle">YELLOW</span>
-				</div>
-				<div class="quizzes-circle-text">YOUR US IS MAKING SOLID CONTACT
-					<br>Your Us is feeling pretty darn good. You’re feeling connected in most categories, with some exceptions. Take some time and celebrate with your spouse the categories where your US is strong. Pick one category where you have grown and talk about what has caused the growth.</div>
-			</li>
-			<li ng-if="boundariesQuizTotal >= 25" class="item">
+			<li ng-if="boundariesQuizTotal >= 23" class="item">
 				<div class="quizzes-circle-container">
 					<span class="green-circle">GREEN</span>
 				</div>
-				<div class="quizzes-circle-text">YOUR US IS TRAILBLAZING
-					<br>Wow – your Us is doing great! Take some time and share with your spouse the ways you’re grateful for his/her part of your Us-ness.</div>
+				<div class="quizzes-circle-text">ARE WE CLEAR? CRYSTAL!
+					<br>Hey, nicely done. Your boundaries are crystal clear, but not immovable. You're good at protecting your time and resources, while allowing room for spontaneity based on the moment, the person, or the ask. Your friends think of you as principled and kind-hearted. Pick 1 category where you have grown the most in balanced boundaries. Share with your spouse what you think caused this shift.</div>
 			</li>
 		</ul>
 		<div class="padding">
