--- a/www/templates/quizzes_usness_results.html
+++ b/www/templates/quizzes_usness_results.html
@@ -4,8 +4,8 @@
 	</ion-nav-title>
 	<ion-content>
 		<h2>
-			<img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Usness Quizzes</h2>
-		<h4>Usness Quiz Results</h4>
+			<img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Us-ness Quizzes</h2>
+		<h4>Us-ness Quiz Results</h4>
 		<div class="padding">
 			<p>As you view your scores, remember the results might put you into a place of pain. If so, use the 4 Steps to move from your pain cycle to your peace cycle.</p>
 		</div>
