quiz text change

--- a/www/templates/quizzes_usness_results.html
+++ b/www/templates/quizzes_usness_results.html
@@ -15,7 +15,7 @@
 					<span class="red-circle">RED</span>
 				</div>
 				<div class="quizzes-circle-text">YOUR US IS ASKING FOR ATTENTION
-					<br>You’re feeling less than connected in most of your Us-ness categories. Choose 1-3 categories that feel most important to you as a couple and make a decision on how to strengthen your Us in these categories. Go to our Make a Decision button for more help.</div>
+					<br>You’re feeling less than connected in most of your Us-ness categories. Choose 1-3 categories that feel most important to you as a couple and make a decision on how to strengthen your Us in these categories. Go to our Decisions button… for more help.</div>
 			</li>
 			<li ng-if="usnessQuizTotal >= 15 && usnessQuizTotal < 20" class="item">
 				<div class="quizzes-circle-container">
