create desc text change

--- a/www/templates/decisions_create.html
+++ b/www/templates/decisions_create.html
@@ -18,7 +18,7 @@
 		</div>
          <div class="grey_bg">
             <div class="padding">
-                <p>Brainstorm six possible solutions to the decision. It is important to be creative and think outside the box. Six options are so much better than two. .</p>
+                <p>Brainstorm six possible solutions to the decision. It is important to be creative and think outside the box. Six options are so much better than two.</p>
                 <div class="list list-inset">
                     <label class="item item-input">
                     1&nbsp;
