--- a/www/templates/4steps_setup.html
+++ b/www/templates/4steps_setup.html
@@ -9,12 +9,12 @@
             <h5>HELPFUL HINT:</h5 >
             <p>Your Pain Cycle will remind you of your typical feelings and ways of reacting when you’re in pain (Steps 1 and 2). Your Peace Cycle will remind you of your typical truths and new actions (Steps 3 and 4).</p>
             <button ui-sref="menu.tabs.cycles" class="button button-block button-calm">Review your Pain/Peace Cycle</button>
-        <br><p class="small-button-text">(Important: don’t add to this statement; adding a  “because you…” will only start another argument)</p>
         </div>
             <ul class="steps-list list">
                 <li class="item">
                   <span class="circle-number">1</span>SAY WHAT YOU FEEL<br>
                 </li>
+                <div class="padding"><p class="small-button-text">(Important: don’t add to this statement; adding a  “because you…” will only start another argument)</p></div>
                 <li class="item">
                   <span class="circle-number">2</span>SAY WHAT YOU NORMALLY DO
                 </li>
