--- a/www/templates/lead_group.html
+++ b/www/templates/lead_group.html
@@ -1,7 +1,8 @@
 <ion-view view-title="Lead Group">
 	<ion-content>
 		<div class="padding">
-			Lead Group
+			<h1>Lead a Group</h1>
+            <button class="button button-block button-positive" href="#" onclick="window.open('-add link: http://family.pepperdine.edu/marriagestrong/leader-training.htm','_system','location=yes')">Click here to search</button>
 		</div>
 	</ion-content>
 </ion-view>
