--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -731,6 +731,11 @@ li.item  {
     padding: 15px 10px 13px 10px;
     display: block;
 }
+
+.steps-list li {
+    font-size: 12px; 
+    letter-spacing: 0px;
+}
     
     
 
