--- a/www/templates/find_group.html
+++ b/www/templates/find_group.html
@@ -1,7 +1,8 @@
 <ion-view view-title="Find Group">
 	<ion-content>
 		<div class="padding">
-			Find Group
+			<h1>Find Group</h1>
+            <button class="button button-block button-positive" href="#" onclick="window.open('http://marriagestrong.net/groups','_system','location=yes')">Click here to search</button>
 		</div>
 	</ion-content>
 </ion-view>
