patrick thursday the 20th

--- a/www/templates/4steps_setup.html
+++ b/www/templates/4steps_setup.html
@@ -12,9 +12,15 @@
         </div>
             <ul class="steps-list list">
                 <li class="item">
-                  <span class="circle-number">1</span>SAY WHAT YOU FEEL<br>
+                    <div>
+                        <div class="circle-number-container">
+                            <span class="circle-number">1</span>
+                        </div>
+                        <div class="circle-number-text-to-the-right">
+                            SAY WHAT YOU FEEL<br><span class="small-button-text">(Important: don’t add to this statement; adding a<br>  “because you…” will only start another argument)</span>
+                        </div>
+                    </div>
                 </li>
-                <div class="padding"><p class="small-button-text">(Important: don’t add to this statement; adding a  “because you…” will only start another argument)</p></div>
                 <li class="item">
                   <span class="circle-number">2</span>SAY WHAT YOU NORMALLY DO
                 </li>
