--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,6 @@
 <ion-view view-title="About">
 	<ion-content>
+        <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
 			<h1>Mission</h1>
             <p>MarriageStrong is committed to helping couples develop valuable relationship skills that will not only help their marriages, but also dramatically change the way they interact with others in their families, friendships, places of work, and within the Body of Christ.</p>
