--- a/www/templates/find_group.html
+++ b/www/templates/find_group.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Find Group">
 	<ion-content>
+        <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
 			<h1>Find Group</h1>
             <button class="button button-block button-positive" href="#" onclick="window.open('http://marriagestrong.net/groups','_system','location=yes')">Click here to search</button>
