--- a/www/templates/lead_group.html
+++ b/www/templates/lead_group.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Lead Group">
 	<ion-content>
+        <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
 			<h1>Lead a Group</h1>
             <button class="button button-block button-positive" href="#" onclick="window.open('-add link: http://family.pepperdine.edu/marriagestrong/leader-training.htm','_system','location=yes')">Click here to search</button>
