--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,7 +1,10 @@
 <ion-view view-title="Products">
 	<ion-content>
+        <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
-			Products
+			<h1>Products</h1>
+            <br><p>5 Days to a new Marriage:</p><a href="#" onclick="window.open('http://5daystoanewmarriage.com/product','_system','location=yes')">5daystoanewmarriage.com/product</a>
+            <br><br><br><p>Restoration Therapy:</p> <a href="#" onclick="window.open('http://restorationtherapytraining.comt','_system','location=yes')">restorationtherapytraining.com</a>
 		</div>
 	</ion-content>
 </ion-view>
