--- a/www/templates/quizzes_boundaries_results.html
+++ b/www/templates/quizzes_boundaries_results.html
@@ -32,6 +32,36 @@
 					<br>Hey, nicely done. Your boundaries are crystal clear, but not immovable. You're good at protecting your time and resources, while allowing room for spontaneity based on the moment, the person, or the ask. Your friends think of you as principled and kind-hearted. Pick 1 category where you have grown the most in balanced boundaries. Share with your spouse what you think caused this shift.</div>
 			</li>
 		</ul>
+        <div class="quiz-results">   
+            <div class="quiz-results-category">
+                Where you are doing well
+            </div>
+            <div class="quiz-results-category-answers">
+                ###VALUES1<br>
+                ###VALUES1<br>
+                ###VALUES1<br>
+            </div>
+        </div>
+        <div class="quiz-results">   
+            <div class="quiz-results-category quiz-results-category-second">
+                Where you are doing Ok
+            </div>
+            <div class="quiz-results-category-answers">
+                ###VALUES2<br>
+                ###VALUES2<br>
+                ###VALUES2<br>
+            </div>
+        </div>
+        <div class="quiz-results">   
+            <div class="quiz-results-category quiz-results-category-second">
+                Where you need attention
+            </div>
+            <div class="quiz-results-category-answers">
+                ###VALUES3<br>
+                ###VALUES3<br>
+                ###VALUES3<br>
+            </div>
+        </div>
 		<div class="padding">
 			<br>
 			<button ui-sref="menu.tabs.quizzes" class="button button-block button-positive">Continue</button>
