--- a/www/templates/quizzes_usness_results.html
+++ b/www/templates/quizzes_usness_results.html
@@ -39,8 +39,38 @@
 					<br>Wow – your Us is doing great! Take some time and share with your spouse the ways you’re grateful for his/her part of your Us-ness.</div>
 			</li>
 		</ul>
-		<div class="padding">
-			<br>
+        <div class="quiz-results">   
+            <div class="quiz-results-category">
+                Where you are doing well
+            </div>
+            <div class="quiz-results-category-answers">
+                ###VALUES1<br>
+                ###VALUES1<br>
+                ###VALUES1<br>
+            </div>
+        </div>
+        <div class="quiz-results">   
+            <div class="quiz-results-category quiz-results-category-second">
+                Where you are doing Ok
+            </div>
+            <div class="quiz-results-category-answers">
+                ###VALUES2<br>
+                ###VALUES2<br>
+                ###VALUES2<br>
+            </div>
+        </div>
+        <div class="quiz-results">   
+            <div class="quiz-results-category quiz-results-category-second">
+                Where you need attention
+            </div>
+            <div class="quiz-results-category-answers">
+                ###VALUES3<br>
+                ###VALUES3<br>
+                ###VALUES3<br>
+            </div>
+        </div>
+        <br>
+        <div class="padding">
 			<button ui-sref="menu.tabs.quizzes" class="button button-block button-positive">Continue</button>
 		</div>
 	</ion-content>
