--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -367,6 +367,11 @@ input[type="radio"] {
     }
 }
 
+.circle-number-container {
+    float: left;
+    width: 20%;
+}
+
 .circle-number {
     font-size: 36px;
     width: 60px;
@@ -377,6 +382,10 @@ input[type="radio"] {
     text-align: center;
     line-height: 62px;
     margin-right: 10px;
+}
+
+.circle-number-text-to-the-right {
+       
 }
 
 .gifts-list li {
@@ -465,6 +474,8 @@ input[type="radio"] {
 .small-button-text{
     font-size: 10px;
     line-height: 10px;
+    font-family: $font-italic;
+    line-height: 9px;
 }
 
 .two-line-button {
@@ -736,7 +747,41 @@ li.item  {
     font-size: 12px; 
     letter-spacing: 0px;
 }
-    
+
+.foursteps-results {
+    padding: 10px 15px 25px; 
+    border-bottom: 1px $lightGrey solid;
+}
+
+.foursteps-results-heading {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: $positive;
+    padding-bottom: 5px;
+}
+
+.foursteps-results-answer {
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.quiz-results {
+    padding: 10px 30px 25px;  
+    border-bottom: 1px $lightGrey solid;
+}
+
+.quiz-results-category {
+    text-transform: uppercase;
+    font-size: 16px;
+    color: $positive;
+}
+
+.quiz-results-category-second {
+    padding-top: 20px;   
+}
+
+
+
     
 
 
