--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -8058,6 +8058,10 @@ input[type="radio"] {
   color: #8f2b21;
   font-size: 16px; }
 
+.circle-number-container {
+  float: left;
+  width: 20%; }
+
 .circle-number {
   font-size: 36px;
   width: 60px;
@@ -8122,7 +8126,9 @@ input[type="radio"] {
 
 .small-button-text {
   font-size: 10px;
-  line-height: 10px; }
+  line-height: 10px;
+  font-family: "HelveticaNeueOblique";
+  line-height: 9px; }
 
 .two-line-button {
   line-height: 16px; }
@@ -8339,3 +8345,29 @@ li.item {
 .steps-list li {
   font-size: 12px;
   letter-spacing: 0px; }
+
+.foursteps-results {
+  padding: 10px 15px 25px;
+  border-bottom: 1px #d0d2d3 solid; }
+
+.foursteps-results-heading {
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #8f2b21;
+  padding-bottom: 5px; }
+
+.foursteps-results-answer {
+  text-transform: uppercase;
+  font-size: 20px; }
+
+.quiz-results {
+  padding: 10px 30px 25px;
+  border-bottom: 1px #d0d2d3 solid; }
+
+.quiz-results-category {
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #8f2b21; }
+
+.quiz-results-category-second {
+  padding-top: 20px; }
