--- a/www/templates/4steps.html
+++ b/www/templates/4steps.html
@@ -10,7 +10,8 @@
 		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
         <div class="padding">
             <p>To break out of destructive conflict, you have to connect to your truth and then consciously make a choice to respond with a new action. The best way to do this is to follow a four-step method that helps train the brain for a new response. Current research tells us that we can change unhealthy patterns in our brains!</p>
-            <button ui-sref="menu.tabs.4steps_setup" class="button button-block button-calm">Your 4 Steps</button>
+            <button ui-sref="menu.tabs.4steps_setup" class="button button-block button-positive">Your 4 Steps</button>
+            <button ui-sref="menu.tabs.4steps_setup_results" class="button button-block button-calm">View your last 4 Steps</button>
 		</div>
 	</ion-content>
 </ion-view>
