--- a/www/templates/app_info.html
+++ b/www/templates/app_info.html
@@ -1,7 +1,8 @@
 <ion-view view-title="App Info">
 	<ion-content>
+        <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
-			Current Version 0.8.19
+			Current Version 0.8.20
 		</div>
 	</ion-content>
 </ion-view>
