--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,11 +4,15 @@
 	</ion-nav-title>
 	<ion-content>
 		<h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Welcome to MarriageStrong</h2>
-		<div class="padding">
+		<a ng-if="!user.User.picture" ui-sref="menu.tabs.photo">
+			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
+		</a>
+		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
+            <div class="padding">
 			<h1>Welcome</h1>
 			<p>It's time your marriage had it's own app. This is a fun way to learn what makes your marriage tick. We'll also help you find ways to make your marriage stronger.</p>
 			<p>Start by discovering what's unique about your relationship in the Us-ness section.  Then find out what happens during your conflicts and how to get out of them in the Cycles section.</p>
-			<p>MarriageStrong is passionate about helping couples love their marriage. The benefit and blessing of a strong marriage is waiting.</p>
+			<p>The benefit and blessing of a strong marriage is waiting.</p>
 			<a ui-sref="menu.tabs.profile" class="button button-block button-positive">Set Up Your Profile</a>
 			<a ui-sref="menu.tabs.usness" class="button button-block button-calm">Discover Your US-Ness</a>
 			<a ui-sref="menu.tabs.cycles" class="button button-block button-calm">Define your pain and peace cycle</a>
