--- a/www/templates/resources.html
+++ b/www/templates/resources.html
@@ -1,11 +1,14 @@
 <ion-view view-title="Resources">
 	<ion-content>
+        <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
+            <h1>Resources</h1>
+            <br>
 			<ul>
-				<li>Boone Center for the Family:  <a href="#" onclick="window.open('http://family.pepperdine.edu','_system','location=yes')">family.pepperdine.edu</a></li>
-				<li>Fuller/Marriage &amp; Family Therapy Dept: <a href="#" onclick="window.open('http://fuller.edu/mft','_system','location=yes')">fuller.edu/mft</a></li>
-				<li>5 Days to a New Marriage: <a href="#" onclick="window.open('http://5daystoanewmarriage.com','_system','location=yes')">5daystoanewmarriage.com</a></li>
-				<li>Hideaway Experience: <a href="#" onclick="window.open('http://intensives.com','_system','location=yes')">intensives.com</a></li>
+				<li>Boone Center for the Family:<br>  <a href="#" onclick="window.open('http://family.pepperdine.edu','_system','location=yes')">family.pepperdine.edu</a><br><br></li>
+				<li>Fuller/Marriage &amp; Family Therapy Dept:<br> <a href="#" onclick="window.open('http://fuller.edu/mft','_system','location=yes')">fuller.edu/mft</a><br><br></li>
+				<li>5 Days to a New Marriage:<br> <a href="#" onclick="window.open('http://5daystoanewmarriage.com','_system','location=yes')">5daystoanewmarriage.com</a><br><br></li>
+				<li>Hideaway Experience:<br> <a href="#" onclick="window.open('http://intensives.com','_system','location=yes')">intensives.com</a><br><br></li>
 			</ul>
 		</div>
 	</ion-content>
